更新连接地址

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 
 <body>
-    <a href="/submenu.html">二级菜单展示</a><br>
-    <a href="/animation.html">递归动画展示</a>
-    <p>这是学校的jquery期中作业，自己写一个二级菜单和任意动画效果。<br>
+    <a href="http://noto1998.gitee.io/jq-mid-term-schoolwork/submenu.html">二级菜单</a><br>
+    <a href="http://noto1998.gitee.io/jq-mid-term-schoolwork/animation.html">递归动画</a>
+    <p>学校的jquery期中作业，自己写一个二级菜单和任意动画效果。<br>
         二级菜单自己琢磨做了出来，没有参考书里的代码，难点在于识别div之外的点击事件，事件捕获会冒泡。<br>
         动画也是自己写的，使用递归完成，用尽量少的代码实现效果。</p>
 </body>
